--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,13 @@ plugins {
 	id 'org.springframework.boot' version '2.5.0'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
+	id "com.palantir.docker" version "0.22.1"
 }
 
 group = 'com.kodilla'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
+def dockerHubName = 'pavelskodilla'
 
 configurations {
 	compileOnly {
@@ -21,10 +23,16 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'com.spotify:dockerfile-maven-plugin:1.4.13'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+}
+
+docker{
+	name "${dockerHubName}" + "/" + "${project.name}-app:${project.version}"
+	files 'app.jar'
 }
 
 test {
