--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/kodilla-quotes
+spring.datasource.url=jdbc:postgresql://postgres-9.6:5432/kodilla-quotes
 spring.datasource.username=kodilla
 spring.datasource.password=kodilla
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
