--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -11,12 +11,39 @@ spec:
       app: kodilla-quotes
   template:
     metadata:
+      name: kodilla-quotes
       labels:
         app: kodilla-quotes
     spec:
       containers:
         - name: kodilla-quotes
-          image: pavelskodilla/quotesapp:2.0
+          env:
+            - name: POSTGRES_USER
+              valueFrom:
+                configMapKeyRef:
+                  key: postgres_user
+                  name: quotes-postgres-config
+            - name: POSTGRES_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  key: password
+                  name: quotes-postgres-secret
+            - name: POSTGRES_HOST
+              valueFrom:
+                configMapKeyRef:
+                  key: postgres_host
+                  name: quotes-hostname-config
+            - name: POSTGRES_DB
+              valueFrom:
+                configMapKeyRef:
+                  key: postgres_db
+                  name: quotes-postgres-config
+            - name: POSTGRES_PORT
+              valueFrom:
+                configMapKeyRef:
+                  key: postgres_port
+                  name: quotes-postgres-config
+          image: pavelskodilla/quotesapp
           ports:
             - containerPort: 8080
           readinessProbe:
